--- a/views/proposals.hbs
+++ b/views/proposals.hbs
@@ -28,6 +28,12 @@
                 </div>
             </div>
 
+            <input type="radio" name="rating" value="1">1
+            <input type="radio" name="rating" value="2">2
+            <input type="radio" name="rating" value="3">3
+            <input type="radio" name="rating" value="4">4
+            <input type="radio" name="rating" value="5">5
+
             <label for="exampleMessage">Description</label>
             <textarea class="u-full-width" placeholder="proposal description" name="proposalDesc"></textarea>
 
