added basic hunce screen

--- a/views/hunces.hbs
+++ b/views/hunces.hbs
@@ -1,21 +1,39 @@
+
+
+<div class="row">
+    <div class="six columns">
+        <h1>Hunces</h1>
+    </div>
+    <div class="six columns">
+        <a class="button" href="/hunce">Hunce!</a>
+    </div>
+
+</div>
+
+<div class="row">
+    <div class="twelve columns">
+        <input type="text" name="name" style="width:100%" value="" placeholder="search...">
+    </div>
+</div>
 <div class="row">
     <div class="six columns">
         <table class="u-full-width">
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Start</th>
+                    <th>Description</th>
+                    <th>Coders</th>
+                    <th>Tags</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Dave Gamache</td>
-                    <td><button type="button" name="button">Start</button></td>
+                    <td></td>
+                    <td></td>
+                    <td><a href="#">view</a></td>
                 </tr>
-                <tr>
-                    <td>Male</td>
-                    <td><button type="button" name="button">Start</button></td>
-                </tr>
+
             </tbody>
         </table>
     </div>
