--- a/views/hunce.hbs
+++ b/views/hunce.hbs
@@ -3,7 +3,8 @@
         <form method="post" action="/proposal">
             <div class="row">
                 <div class="six columns">
-                    <label for="select-state">Coders:</label>
+                    <h1>Create a hunce</h1>
+
 					<select id="select-state" name="coders[]" multiple class="demo-default" placeholder="Select some coders">
 						<option value="">Select some coders...</option>
 						<option value="1">Lindani Pani</option>
@@ -15,7 +16,26 @@
 
             <div class="row">
                 <div class="six columns">
-                    <label for="rating">Rating</label>
+                    <textarea class="u-full-width" placeholder="What is this hunce about?" name="hunceDescription"></textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="six columns">
+					<select id="select-tags" name="tags[]" multiple class="demo-default" placeholder="Select some tags">
+						<option value="">Select some tags...</option>
+						<option value="1">demo</option>
+						<option value="2">hackathon</option>
+						<option value="3">feedback</option>
+					</select>
+
+                </div>
+                <div class="two columns">
+                    <input type="button" value="Add tag">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="six columns">
                     <input type="radio" name="rating" value="1">1
                     <input type="radio" name="rating" value="2">2
                     <input type="radio" name="rating" value="3">3
@@ -23,23 +43,10 @@
                     <input type="radio" name="rating" value="5">5
                 </div>
             </div>
-            <label for="exampleMessage">Description</label>
-            <textarea class="u-full-width" placeholder="proposal description" name="proposalDesc"></textarea>
 
             <div class="row">
-                <div class="six columns">
-                    <label for="select-tags">Tags:</label>
-					<select id="select-tags" name="tags[]" multiple class="demo-default" placeholder="Select some tags">
-						<option value="">Select some tags...</option>
-						<option value="1">demo</option>
-						<option value="2">hackathon</option>
-						<option value="3">feedback</option>
-					</select>
-                </div>
+                <input class="button-primary" type="submit" value="Submit">
             </div>
-
-
-            <input class="button-primary" type="submit" value="Submit">
         </form>
     </div>
 </div>
