--- a/views/hunce.hbs
+++ b/views/hunce.hbs
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="twelve columns">
-        <form method="post" action="/proposal">
+        <form method="post" action="/hunch/new">
             <div class="row">
                 <div class="six columns">
                     <h1>Create a hunce</h1>
