--- a/views/hunces.hbs
+++ b/views/hunces.hbs
@@ -5,14 +5,14 @@
         <h1>Hunces</h1>
     </div>
     <div class="six columns">
-        <a class="button" href="/hunce">Hunce!</a>
+        <a class="button" href="/hunch">Hunce!</a>
     </div>
 
 </div>
 
 <div class="row">
     <div class="twelve columns">
-        <input type="text" name="name" style="width:100%" value="" placeholder="search...">
+        <input type="text" name="name" style="width:50%" value="" placeholder="search...">
     </div>
 </div>
 <div class="row">
@@ -27,18 +27,21 @@
                 </tr>
             </thead>
             <tbody>
+
+                {{#hunches}}
                 <tr>
-                    <td>Dave Gamache</td>
-                    <td></td>
-                    <td></td>
-                    <td><a href="#">view</a></td>
+                    <td>{{description}}</td>
+                    <td>{{coders}}</td>
+                    <td> {{tags}}</td>
+                    <td><a href="/hunch/{{id}}">view</a></td>
                 </tr>
+                {{/hunches}}
 
             </tbody>
         </table>
     </div>
     <div class="six columns">
-        <form method="post" action="/proposal">
+        <form method="post" action="/proposal/new">
             <div class="row">
                 <div class="six columns">
                     <label for="exampleEmailInput">Proposal name</label>
