Fixed all the obvious bugs in the application.

--- a/views/edit_hunch.hbs
+++ b/views/edit_hunch.hbs
@@ -20,7 +20,7 @@
         </div>
         <div class="row">
             <div class="six columns">
-                <textarea class="u-full-width" placeholder="What is this hunce about?" name="hunceDescription">{{#hunch}}{{description}}{{/hunch}}</textarea>
+                <textarea class="u-full-width" placeholder="What is this hunce about?" name="hunchDescription">{{#hunch}}{{description}}{{/hunch}}</textarea>
             </div>
         </div>
         <div class="row">
