--- a/views/hunches.hbs
+++ b/views/hunches.hbs
@@ -2,9 +2,7 @@
 
 <div class="row">
     <div class="six columns">
-        <h1>
-            <a href="/" class="twelve">Hunches</a>
-        </h1>
+        <h1>Hunches</h1>
     </div>
 </div>
 
