--- a/views/hunches.hbs
+++ b/views/hunches.hbs
@@ -47,6 +47,6 @@
         </table>
     </div>
     <div class="six columns">
-        <a class="button" href="/hunch">New Hunch!</a>
+        <a class="button" href="/hunch/new">New Hunch!</a>
     </div>
 </div>
