--- a/views/hunches.hbs
+++ b/views/hunches.hbs
@@ -1,11 +1,21 @@
-
-
 <div class="row">
+    <div class="g-signin2 three columns" data-onsuccess="onSignIn"></div>
+
     <div class="six columns">
         <h1>Hunches</h1>
     </div>
-</div>
 
+    <a class="three columns" href="#" onclick="signOut();">Sign out</a>
+    <script>
+      function signOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+          console.log('User signed out.');
+        });
+      }
+    </script>
+
+</div>
 <div class="row">
     <div class="twelve columns">
         <input type="text" id="searchHunces" name="searchHunces" style="width:50%" value="" placeholder="search...">
@@ -24,25 +34,21 @@
                 </tr>
             </thead>
             <tbody>
-
                 {{#if hunches}}
-
                     {{#each hunches}}
-
-                    <tr>
-                        <td>{{description}}</td>
-                        <td>{{coders}}</td>
-                        <td> {{tags}}</td>
-                        <td><a href="/hunch/edit/{{id}}">Edit</a></td>
-                        <td><a href="/hunch/delete/{{id}}">Delete</a></td>
-                    </tr>
+                        <tr>
+                            <td>{{description}}</td>
+                            <td>{{coders}}</td>
+                            <td> {{tags}}</td>
+                            <td><a href="/hunch/edit/{{id}}">Edit</a></td>
+                            <td><a href="/hunch/delete/{{id}}">Delete</a></td>
+                        </tr>
                     {{/each}}
-
                 {{else}}
-                <tr>
-                <td colspan="5">There are no saved hunches in the datadase.<td></tr>
+                    <tr>
+                        <td colspan="5">There are no saved hunches in the datadase.<td>
+                    </tr>
                 {{/if}}
-
             </tbody>
         </table>
     </div>
