--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,12 @@
         Hunches App
     </title>
 
+    <!-- Google Sign in
+    ––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="904722340683-ldq48rvgdm9k5ink1eq2u8cnfknn1qns.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
