Added function to console.log user info on sign in.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,9 +9,20 @@
 
     <!-- Google Sign in
     ––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-scope" content="profile">
     <meta name="google-signin-client_id" content="904722340683-ldq48rvgdm9k5ink1eq2u8cnfknn1qns.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+    <!-- Google Sign out
+    ––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script>
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+              console.log('User signed out.');
+            });
+        };
+    </script>
 
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -46,6 +57,7 @@
     <!-- .container is main centered wrapper -->
     <div class="container">
 
+        <a href="#" onclick="signOut();">Sign out</a>
         {{{body}}}
         <style media="screen">
             .work {
