--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,6 +11,7 @@
 		  console.log('Name: ' + profile.getName());
 		  console.log('Image URL: ' + profile.getImageUrl());
 		  console.log('Email: ' + profile.getEmail());
+		  console.log('User Profile: ' + profile);
 		}
 	</script>
 
