--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,7 +11,7 @@
 		  console.log('Name: ' + profile.getName());
 		  console.log('Image URL: ' + profile.getImageUrl());
 		  console.log('Email: ' + profile.getEmail());
-		  console.log('User Profile: ' + JSON.parse(JSON.stringify(profile)));
+		  console.log('User Profile: ' + JSON.parse(profile));
 		}
 	</script>
 
