Sign out button now only on login page. [This is only for testing purposes]

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,11 +9,14 @@
 		
 	</table>
 
-    <div class="g-signin2 two columns" data-onsuccess="onSignIn">
-		
+    <div class="twelve columns">
+        <h1>Test sign in to Hunches</h1>
+    </div>
+
+    <div class="g-signin2 six columns" data-onsuccess="onSignIn">
+
 	</div>
 
-    <div class="six columns">
-        <h1>Sign In to Hunches</h1>
-    </div>
+	<a href="#" class="two columns" onclick="signOut();">Sign out</a>
+
 </div>
