Sign out button working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,6 +36,7 @@
     <!-- Custom Js
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script type="text/javascript" src="/js/searchHunces.js"></script>
+    <script type="text/javascript" src="/js/auth.js"></script>
 
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -45,7 +46,7 @@
 <body>
     <!-- .container is main centered wrapper -->
     <div class="container">
-    
+
         {{{body}}}
         <style media="screen">
             .work {
