--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,6 +37,7 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script type="text/javascript" src="/js/searchHunces.js"></script>
     <script type="text/javascript" src="/js/auth.js"></script>
+    <script type="text/javascript" src="/js/interactivity.js"></script>
 
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
