--- a/views/edit_hunch.hbs
+++ b/views/edit_hunch.hbs
@@ -5,7 +5,7 @@
                 <div class="six columns">
                     <h1>Edit a hunch</h1>
 
-                    <select id="select-state" name="coders[]" multiple class="demo-default" placeholder="Select some coders">
+                    <select id="select-coders" name="coders[]" multiple class="demo-default" placeholder="Select some coders">
                         <option value="">Select some coders...</option>
                         {{#hunch_coders}}
                         <option value="{{id}}" selected>{{name}}</option>
@@ -20,7 +20,7 @@
         </div>
         <div class="row">
             <div class="six columns">
-                <textarea class="u-full-width" placeholder="What is this hunch about?" name="hunchDescription">{{#hunch}}{{description}}{{/hunch}}</textarea>
+                <textarea class="u-full-width" placeholder="What is this hunch about?" name="hunchDescription" required>{{#hunch}}{{description}}{{/hunch}}</textarea>
             </div>
         </div>
         <div class="row">
@@ -36,16 +36,28 @@
                 </select>
             </div>
             <div class="two columns">
-                <input type="button" value="Add tag">
+                <input type="button" name="add-tag" value="Add new tag">
             </div>
         </div>
         <div class="row">
             <div class="six columns">
-                <input type="radio" name="rating" value="1">1
-                <input type="radio" name="rating" value="2">2
-                <input type="radio" name="rating" value="3">3
-                <input type="radio" name="rating" value="4">4
-                <input type="radio" name="rating" value="5">5
+                <div class="four columns">
+                    <input type="radio" name="rating" value="3">
+                    <img src="/emoticons/1.gif" border="0" alt="Happy" title = "Happy emoticon" />
+                    <label>Positive</label>
+                </div>
+
+                <div class="four columns">
+                    <input type="radio" name="rating" value="2">
+                    <img src="/emoticons/2.gif" border="0" alt="Observational" title = "Observational emoticon" />
+                    <label>Informing</label>
+                </div>
+
+                <div class="four columns">
+                    <input type="radio" name="rating" value="1">
+                    <img src="/emoticons/3.gif" border="0" alt="Disappointed" title = "Disappointed emoticon" />
+                    <label>Negative</label>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -55,7 +67,7 @@
 </div>
 </div>
 <script>
-    $select = $('#select-state').selectize({
+    $select = $('#select-coders').selectize({
         maxItems: 3,
         create: false,
     });
