--- a/views/hunch.hbs
+++ b/views/hunch.hbs
@@ -27,7 +27,10 @@
 
             <div class="row">
                 <div class="six columns">
-                    <textarea class="u-full-width" placeholder="What is this hunch about?" name="hunchDescription" required>{{#if hunchDescription}}{{hunchDescription}}{{/if}}</textarea>
+                    <div name="remaining-characters" class="u-full-width">
+                        Remaing: (200)
+                    </div>
+                    <textarea maxlength="200" class="u-full-width" placeholder="What is this hunch about?" name="hunchDescription" required>{{#if hunchDescription}}{{hunchDescription}}{{/if}}</textarea>
                 </div>
             </div>
             <div class="row">
@@ -76,7 +79,8 @@
             </div>
 
             <div class="row">
-                <input class="button-primary" type="submit" value="Submit">
+                <input class="five columns button-primary" type="submit" value="Submit">
+                <a href="/" class="one columns" title="cancel">cancel</a>
             </div>
         </form>
     </div>
