--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,6 +28,10 @@
     <link rel="stylesheet" href="/css/stylesheet.css">
     <link rel="stylesheet" href="/css/selectize.default.css">
 
+    <!-- Custom CSS
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" type="text/css" href="/css/custom.css">
+
     <!-- Js -->
 
     <script src="/js/jquery.js"></script>
