Confirm delete. Reordered hunch's display table columns. Date visible. Can add tags on the fly

--- a/views/edit_hunch.hbs
+++ b/views/edit_hunch.hbs
@@ -56,12 +56,12 @@
                     <img src="/emoticons/3.gif" border="0" alt="Disappointed" title = "Disappointed emoticon" />
                 </div>
 
-                <div class="ten columns">
+                <div class="two columns">
                     <input type="radio" name="rating" value="4">
                     <img src="/emoticons/4.gif" border="0" alt="QuestionMark" title = "QuestionMark" />
                 </div>
 
-                <div class="ten columns">
+                <div class="two columns">
                     <input type="radio" name="rating" value="5">
                     <img src="/emoticons/5.gif" border="0" alt="ExclamationMark" title = "ExclamationMark" />
                 </div>
