--- a/views/hunches.hbs
+++ b/views/hunches.hbs
@@ -16,9 +16,10 @@
             <thead>
                 <tr>
                     <th>Emoticon</th>
-                    <th>Description</th>
+                    <th>Date</th>
                     <th>Coders</th>
                     <th>Tags</th>
+                    <th>Description</th>
                     <th></th>
                     <th></th>
                 </tr>
@@ -28,11 +29,12 @@
                     {{#each hunches}}
                         <tr>
                             <td><img src="/emoticons/{{rating}}.gif" alt=""></td>
-                            <td>{{description}}</td>
+                            <td>{{date_created}}</td>
                             <td>{{coders}}</td>
                             <td> {{tags}}</td>
-                            <td><a id="editHunch" href="/hunch/edit/{{id}}">Edit</a></td>
-                            <td><a id="deleteHunch" href="/hunch/delete/{{id}}">Delete</a></td>
+                            <td>{{description}}</td>
+                            <td><a class="editHunch" href="/hunch/edit/{{id}}">Edit</a></td>
+                            <td><a class="deleteHunch" href="/hunch/delete/{{id}}">Delete</a></td>
                         </tr>
                     {{/each}}
                 {{else}}
