Tags now persistent. Can click on icon for feeling/rating.

--- a/views/hunch.hbs
+++ b/views/hunch.hbs
@@ -50,28 +50,38 @@
             <div class="row">
                 <div class="ten columns">
                     <div class="two columns">
-                        <input type="radio" name="rating" value="1">
-                        <img src="/emoticons/1.gif" border="0" alt="Happy" title = "Happy emoticon" />
+                        <label>
+                            <input type="radio" name="rating" value="1">
+                            <img src="/emoticons/1.gif" border="0" alt="Happy" title = "Happy emoticon" />
+                        </label>
                     </div>
 
                     <div class="two columns">
-                        <input type="radio" name="rating" value="2">
-                        <img src="/emoticons/2.gif" border="0" alt="Observational" title = "Observational emoticon" />
+                        <label>
+                            <input type="radio" name="rating" value="2">
+                            <img src="/emoticons/2.gif" border="0" alt="Observational" title = "Observational emoticon" />
+                        </label>
                     </div>
 
                     <div class="two columns">
-                        <input type="radio" name="rating" value="3">
-                        <img src="/emoticons/3.gif" border="0" alt="Disappointed" title = "Disappointed emoticon" />
+                        <label>
+                            <input type="radio" name="rating" value="3">
+                            <img src="/emoticons/3.gif" border="0" alt="Disappointed" title = "Disappointed emoticon" />
+                        </label>
                     </div>
 
                     <div class="two columns">
-                        <input type="radio" name="rating" value="4">
-                        <img src="/emoticons/4.gif" border="0" alt="QuestionMark" title = "QuestionMark" />
+                        <label>
+                            <input type="radio" name="rating" value="4">
+                            <img src="/emoticons/4.gif" border="0" alt="QuestionMark" title = "QuestionMark" />
+                        </label>
                     </div>
 
                     <div class="two columns">
-                        <input type="radio" name="rating" value="5">
-                        <img src="/emoticons/5.gif" border="0" alt="ExclamationMark" title = "ExclamationMark" />
+                        <label>
+                            <input type="radio" name="rating" value="5">
+                            <img src="/emoticons/5.gif" border="0" alt="ExclamationMark" title = "ExclamationMark" />
+                        </label>
                     </div>
                 </div>
             </div>
