Removed skeleton styling files and added bootstrap files for easier styling.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,14 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Hunches App
+        Hunches Application
     </title>
 
     <!-- Google Sign in
     ––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta name="google-signin-scope" content="profile">
-    <meta name="google-signin-client_id" content="904722340683-ldq48rvgdm9k5ink1eq2u8cnfknn1qns.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -23,10 +21,7 @@
 
     <!-- CSS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/skeleton.css">
-    <link rel="stylesheet" href="/css/stylesheet.css">
-    <link rel="stylesheet" href="/css/selectize.default.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
 
     <!-- Custom CSS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -35,6 +30,7 @@
     <!-- Js -->
 
     <script src="/js/jquery.js"></script>
+    <script src="/js/bootstrap.js"></script>
 	<script src="/js/selectize.js"></script>
 
     <!-- Custom Js
